--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
     <title>Chapter 10 Examples</title>
 </head>
 <body>
-    <img src="images/usa.png" alt="USA flag" onclick="changeImg(this)" />
-    <img src="images/mexico.png" alt="Mexico flag" onclick="changeImg(this)" />
+    <img src="images/usa.png" alt="USA flag" width="250" height="150" onclick="changeImg(event)" />
+    <img src="images/mexico.png" alt="Mexico flag" width="250" height="150" onclick="changeImg(event)" />
 
 
-    <script src="ch10ex1.js"></script>
+    <script src="ch10ex2.js"></script>
 
-
-   <!-- <script> 
-       
-   </script> -->
+  
     
 </body>
 </html>
