making good progress

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>Chapter 10 Examples</title>
 </head>
 <body>
-    <img src="images/usa.png" alt="USA flag" width="250" height="150" onclick="changeImg(event)" />
-    <img src="images/mexico.png" alt="Mexico flag" width="250" height="150" onclick="changeImg(event)" />
+    <img id="img0" src="images/usa.png" alt="USA flag" width="250" height="150" />
+    <img id="img1" src="images/mexico.png" alt="Mexico flag" width="250" height="150" />
+
+    <!-- <a id="someLink" href="somepage.html">Click Me</a> -->
 
 
-    <script src="ch10ex2.js"></script>
+    <script src="ch10ex4.js"></script>
 
   
     
