starting with event listeners

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 </head>
 <body>
     <img id="img0" src="images/usa.png" alt="USA flag" width="250" height="150" />
-    <img id="img1" src="images/mexico.png" alt="Mexico flag" width="250" height="150" />
+    <img id="img1" src="images/canada.png" alt="Canada flag" width="250" height="150" />
+    <br>
+    <hr>
+    <a id="someLink" href="somepage.html">Click Me</a>
 
-    <!-- <a id="someLink" href="somepage.html">Click Me</a> -->
 
-
-    <script src="ch10ex4.js"></script>
+    <script src="ch10ex5.js"></script>
 
   
     
