remove event listeners

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
     <img id="img0" src="images/usa.png" alt="USA flag" width="250" height="150" />
-    <img id="img1" src="images/canada.png" alt="Canada flag" width="250" height="150" />
+    <div id="status"></div>
+    <!-- <img id="img1" src="images/canada.png" alt="Canada flag" width="250" height="150" /> -->
     <br>
     <hr>
     <a id="someLink" href="somepage.html">Click Me</a>
 
 
-    <script src="ch10ex6.js"></script>
+    <script src="ch10ex7.js"></script>
 
   
     
