mouse event listeners

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chapter 10 Examples</title>
+    <style>
+        .underline {
+            color: red;
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <img id="img0" src="images/usa.png" alt="USA flag" width="250" height="150" />
-    <div id="status"></div>
-    <!-- <img id="img1" src="images/canada.png" alt="Canada flag" width="250" height="150" /> -->
-    <br>
-    <hr>
-    <a id="someLink" href="somepage.html">Click Me</a>
+    <p>This is paragraph 1.</p>
+    <p>This is paragraph 2.</p>
+    <p>This is paragraph 3.</p>
 
-
-    <script src="ch10ex7.js"></script>
 
   
-    
+    <script src="ch10ex8.js"></script>    
 </body>
 </html>
